--- a/proposta-comercial/index.html
+++ b/proposta-comercial/index.html
@@ -247,6 +247,9 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="supabase-config.js"></script>
+    <script src="auth-guard.js"></script>
     <script>
         function mostrarExemplo() {
             // Dados de exemplo para demonstração (NÃO cria linha na planilha)
