--- a/proposta-comercial/proposta-gerador.html
+++ b/proposta-comercial/proposta-gerador.html
@@ -28,6 +28,8 @@
     /* Cards dos serviços e simulador */
     .servicos-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px; }
     .servico-card { background: #1a1a1a; border: 2px solid #333; border-radius: 12px; padding: 18px; }
+    .servico-card--full { grid-column: 1 / -1; }
+    .catalogo-row { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; align-items: start; }
 
     .simulador-periodos h4 { color: #1E5942; font-size: 1.2rem; margin-bottom: 8px; display: flex; align-items: center; gap: 8px; }
     .simulador-subtitle { color: #888; font-size: 0.9rem; margin-bottom: 16px; }
@@ -89,7 +91,7 @@
     .link-container { display: flex; gap: 10px; margin: 20px 0; }
 
     /* Responsivo */
-    @media (max-width: 900px) { .servicos-grid { grid-template-columns: 1fr; } }
+    @media (max-width: 900px) { .servicos-grid { grid-template-columns: 1fr; } .catalogo-row { grid-template-columns: 1fr; } }
     @media (max-width: 768px) {
       .cliente-grid { grid-template-columns: 1fr; }
       .periodos-grid { grid-template-columns: 1fr; gap: 12px; }
@@ -170,19 +172,45 @@
           <!-- Social Media e Tráfego Pago removidos: fluxo Catálogo-only -->
 
           <!-- Serviço do Catálogo (genérico) -->
-          <div class="servico-card">
+          <div class="servico-card servico-card--full">
             <h3>📦 Serviço do Catálogo</h3>
-            <div class="form-group">
-              <label for="catalogoProdutoSelect">Selecione o Serviço</label>
-              <select id="catalogoProdutoSelect" name="catalogoProdutoSelect">
-                <option value="">Carregando serviços...</option>
-              </select>
-            </div>
-            <div class="form-group" id="catalogoPlanoWrapper" style="display:none;">
-              <label for="catalogoPlanoSelect">Selecione o Plano (quando aplicável)</label>
-              <select id="catalogoPlanoSelect" name="catalogoPlanoSelect">
-                <option value="">Selecione um serviço primeiro</option>
-              </select>
+            <div class="catalogo-row">
+              <div>
+                <div class="form-group">
+                  <label for="catalogoProdutoSelect">Selecione o Serviço</label>
+                  <select id="catalogoProdutoSelect" name="catalogoProdutoSelect">
+                    <option value="">Carregando serviços...</option>
+                  </select>
+                </div>
+                <div class="form-group" id="catalogoPlanoWrapper" style="display:none;">
+                  <label for="catalogoPlanoSelect">Selecione o Plano (quando aplicável)</label>
+                  <select id="catalogoPlanoSelect" name="catalogoPlanoSelect">
+                    <option value="">Selecione um serviço primeiro</option>
+                  </select>
+                </div>
+              </div>
+              <div>
+                <div class="form-group" id="catalogoModeloWrapper" style="margin-top:0;">
+                  <label for="modeloCatalogoSelect">💳 Modelo de Cobrança</label>
+                  <select id="modeloCatalogoSelect" name="modeloCatalogoSelect">
+                    <option value="base" selected>Valor baseado no plano</option>
+                    <option value="comissao">% sobre vendas</option>
+                    <option value="alterado">Valor fixo alterado</option>
+                    <option value="hibrido">Valor alterado + % sobre vendas</option>
+                  </select>
+                  <div id="catalogoModeloFields" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:12px; margin-top:8px;">
+                    <div>
+                      <label for="valorCatalogoOverride">Valor fixo (R$)</label>
+                      <input id="valorCatalogoOverride" type="text" placeholder="Ex: 2500,00" />
+                    </div>
+                    <div>
+                      <label for="percentualCatalogo">Percentual de vendas (%)</label>
+                      <input id="percentualCatalogo" type="number" min="0" step="0.1" placeholder="Ex: 5" />
+                    </div>
+                  </div>
+                  <small style="color:#9aa0a6">Selecione o modelo; os campos aparecem conforme a escolha.</small>
+                </div>
+              </div>
             </div>
             <button type="button" class="btn-toggle-entregaveis" id="toggleCatalogo" onclick="toggleEntregaveis('Catalogo')" style="display: none;">📋 Ver Entregáveis</button>
             <div class="form-group entregaveis-container" id="entregaveisCatalogo" style="display: none;">
@@ -244,6 +272,7 @@
             </div>
           </div>
         </div>
+
 
         <div class="form-group">
           <label for="observacoes">Observações Adicionais</label>
